--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,10 @@ h1{
 	text-shadow: 2px 2px 2px grey;
 	color: white;
 }
+	
+h2{
+	text-align: center;
+}
 
 ul{
 	width: 400px;
@@ -64,7 +68,7 @@ ul{
 }
 
 a:visited{
-	color: grey;
+	color: fuchsia;
 }
 
 a:hover{
