--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,14 @@
 body{
-	background-image: url(../images/EarthFromSpace.jpg);
-	background-attachment: fixed;
-	background-position: center;
+	background: #7d7e7d; /* Old browsers */
+	background: -moz-linear-gradient(top,  #7d7e7d 0%, #0e0e0e 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#7d7e7d), color-stop(100%,#0e0e0e)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  #7d7e7d 0%,#0e0e0e 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  #7d7e7d 0%,#0e0e0e 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  #7d7e7d 0%,#0e0e0e 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  #7d7e7d 0%,#0e0e0e 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7d7e7d', endColorstr='#0e0e0e',GradientType=0 ); /* IE6-9 */
 	margin: 0 auto;
-	width: 800px;
+	width: 900px;
 }
 
 h1, h2{
@@ -36,7 +41,7 @@ h2{
 }
 
 ul{
-	width: 400px;
+	width: 450px;
 	margin: 0 auto;
 	list-style-type: none;
 	padding: 0;
@@ -76,11 +81,11 @@ a:hover{
 }
 
 aside{
-	width: 400px;
+	width: 450px;
 	margin: 0 auto;
 }
 
 article{
-	width: 400px;
+	width: 450px;
 	margin: 0 auto;
 }
