--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,8 @@ body{
 h1, h2{
 	text-align: center;
 	font-family: Underdog, helvetica, sans-serif;
-	color: #00ff00; 
+	color: #00ff00;
+	margin: 0 auto; 
 }
 
 h1{
@@ -25,7 +26,9 @@ h1{
 
 header{
 	background: black;
+	border: 2px solid white;
 	width: 900px;
+	margin: 0 auto;
 }
 
 p{
@@ -36,6 +39,9 @@ p{
 section{
 	-moz-column-count: 3;
 	background: white;
+	width: 900px;
+	margin: 0 auto;
+	padding: 2px;
 }
 
 #titlestatement{
@@ -53,6 +59,11 @@ ul{
 
 nav{
 	background: black;
+	border-top: 2px solid white;
+	border-left: 2px solid white;
+	border-right: 2px solid white;
+	width: 900px;
+	margin: 0 auto;
 }
 
 .navlist{
@@ -95,9 +106,8 @@ a:hover{
 aside{
 	background: white;
 	text-align: center;
-	width: 900px;
+	width: 904px;
 	margin: 0 auto;
-
 }
 
 .imageanchors{
@@ -124,14 +134,12 @@ li{
 
 article{
 	background: white;
-	width: 900px;
+	width: 904px;
 	margin: 0 auto;
 	text-align: center;
-
 }
 
 footer{
 	background: white;
-	width: 900px;
-	margin: 0 auto;
+	width: 904px;
 }
