--- a/css/main.css
+++ b/css/main.css
@@ -140,6 +140,41 @@ footer{
 	width: 100%;
 }
 
+.clear { /* generic container (i.e. div) for floating buttons */
+    overflow: hidden;
+    width: 100%;
+}
+
+a.button {
+    background: transparent url('bg_button_a.gif') no-repeat scroll top right;
+    color: #444;
+    display: block;
+    float: left;
+    font: normal 12px arial, sans-serif;
+    height: 24px;
+    margin-right: 6px;
+    padding-right: 18px; /* sliding doors padding */
+    text-decoration: none;
+}
+
+a.button span {
+    background: transparent url('bg_button_span.gif') no-repeat;
+    display: block;
+    line-height: 14px;
+    padding: 5px 0 5px 18px;
+} 
+
+a.button:active {
+    background-position: bottom right;
+    color: #000;
+    outline: none; /* hide dotted outline in Firefox */
+}
+
+a.button:active span {
+    background-position: bottom left;
+    padding: 6px 0 4px 18px; /* push text down 1px */
+} 
+
 /*-------------------------------meida-queries------------------------*/
 
 	@media screen and (min-width: 768px) and (max-width: 959px) {
@@ -156,7 +191,6 @@ footer{
 		margin: 0 auto;
 		}
 		body{background: none;
-		margin: 0 center;
 		}
 }
 
